Login hide, notion completion

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -63,7 +63,7 @@ nav {
     width: 100%;
     height: auto;
     margin: 0;
-    padding-right: 10rem;
+    padding-right: 5%;
     background-color: #5c6cf8;
     z-index: 10;
 }
