--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -29,6 +29,20 @@ label {
     color: #34495e;
 }
 
+.inner-fill {
+    padding: 20rem
+}
+
+.blur-line {
+    position: absolute;
+    z-index: 2;
+    margin-top: 20rem;
+    width: 100%;
+    height: 40%;
+    backdrop-filter: blur(4px);
+
+}
+
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
@@ -144,7 +158,7 @@ a.pure-button-primary {
 
 .splash-container {
     background: #1f8dd6;
-    z-index: 2;
+    z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
@@ -152,7 +166,11 @@ a.pure-button-primary {
     top: 0;
     left: 0;
     position: fixed !important;
-    background-image: image(var(--backimage));
+    background-image: url("https://prod-files-secure.s3.us-west-2.amazonaws.com/0acaec8c-ca8c-417a-9704-ebb60a77e03f/255d04ba-bae1-454e-a934-f9c335e5c66c/99e030561fbb7c159667977257db4bb.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45HZZMZUHI%2F20240906%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240906T124405Z&X-Amz-Expires=3600&X-Amz-Signature=6d6383a4887e1facfa69a8ad13891603e5526435ae9bb09a972e12a2a1d77723&X-Amz-SignedHeaders=host&x-id=GetObject");
+    background-size:cover;
+    background-position-y: -100px;
+    background-repeat: repeat;
+    background-position-x: center
 }
 
 .splash {
@@ -162,9 +180,10 @@ a.pure-button-primary {
     height: 50%;
     margin: auto;
     position: absolute;
-    top: 100px; left: 0; bottom: 0; right: 0;
+    top: 80px; left: 0; bottom: 0; right: 0;
     text-align: center;
     text-transform: uppercase;
+    z-index: 5 !important;
 }
 
 /* This is the main heading that appears on the blue section */
@@ -177,6 +196,7 @@ a.pure-button-primary {
     font-weight: 100;
     border-radius: 5px;
     line-height: 1em;
+    
 }
 
 /* This is the subheading that appears on the blue section */
