--- a/src/forms/Login.css
+++ b/src/forms/Login.css
@@ -1,36 +1,20 @@
-
-#root {
-  --app-padding: 6vh;
-  --app-width: 50vh;
-  --app-height: 90vh;
-  --detail-padding: 4vh;
-  --heading-text-size: 4.8vh;
-  --color-primary: #0F9EDE;
-  --color-secondary: #D0DFF0;
-  --color-text-secondary: rgba(black, 0.45);
-  --color-border: #E3E3E3;
-  --color-cal: #08B5CF;
-  --color-heart: #9965AA;
-  --color-steps: --color-primary;
-  --color-temp: #F4814B;
-  --view-delay: 2s;
-  --duration: 0.6s;
-  --segment-duration: 1.2s;
-  --pulse-duration: 1.75s;
-  --easing: cubic-bezier(0.77, 0, 0.175, 1);
-  --stroke-width: 0.5vh;
+body{
+  background-color: #57afe99c;
 }
 
 * {
-  transition: all var("duration") var("easing");
+  transition: all 0.6 cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 #app {
+  position:absolute;
   width:50vh;
-  height: 90vh;
+  height: 50vh;
+  left: 35%;
+  top: 20vh;
   padding: 6vh;
-  background: white;
-  box-shadow: 0 0 2rem rgba(black, 0.1);
+  background: rgb(255, 255, 255);
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.521);
 }
 
 .app-view {
@@ -41,19 +25,28 @@
   height: 100%;
 }
 
+.padded {
+  padding-top: 100px;
+}
+
 .app-header {
+  margin-top: 120vh;
+  font-family:'Times New Roman', Times, serif;
+  color: black;
+  z-index: 5;
   padding:6vh;
   
   &, > * {  
-    font-size: var("heading-text-size");
+    font-size: 4.8vh;
     margin: 0;
     font-weight: 300;
   }
   
   > h1 {
-    font-size: var("heading-text-size");
+    color:orange;
+    font-size: 4.8vh;
     font-weight: 400;
-    margin-bottom: var("heading-text-size");
+    margin-bottom: 4.8vh;
   }
   
   > h2 {
@@ -62,7 +55,11 @@
 }
 
 .app-subheading {
-  color: var("color-text-secondary");
+  
+  font-size: 40px;
+  color: rgba(0, 0, 0, 0.459);
+  line-height: 0.9;
+  text-transform:none;
 }
 
 .app-register {
@@ -70,8 +67,8 @@
   bottom: 0;
   height: 10vh;
   line-height: 10vh;
-  padding: 0 var("app-padding");
-  color: var("color-text-secondary");
+  padding: 0 6vh;
+  color: rgba(0, 0, 0, 0.459);
   
   > a {
     font-weight: 400;
@@ -79,62 +76,45 @@
 }
 
 input {
+  padding:10px;
+  border: none;
+  border-bottom: 2px solid #0000006e; 
+  
   font-size: 2.5vh;
   width: calc(100% - 13vh);
-  height: 7.5vh;
+  color: black;
+  height: 2.5vh;
   margin-bottom: 2vh;
   background: transparent;
   position: absolute;
   top: 0;
   left: 6.5vh;
   z-index: 2;
-  border: none;
-  box-shadow: inset 0 -0.5vh rgba(black, 0.1);
   
   &:focus {
     outline: none;
-    box-shadow: inset 0 -0.5vh transparent;
+    box-shadow: 0 1vh 0.75vh rgba(0, 0, 0, 0.11);
   }
   
   &[type="email"] {
-    top: 58%;
+    top: 40%;
   }
   
   &[type="password"] {
-    top: calc(58% + 7.5vh);
+    top: calc(40% + 7.5vh);
   }
-}
-
-input[type="email"]:valid ~ * .st1 {
-  transition-timing-function: ease-in-out;
-  stroke-dasharray: 50, 153;  
-  stroke-dashoffset: 25;
-}
-
-input[type="password"]:focus ~ * .st0,
-input[type="password"]:valid ~ * .st0,
-.app-button:focus ~ * .st0 {
-  stroke-dasharray: 210, 900;
-  stroke-dashoffset: -305;
-}
-
-input[type="email"]:focus ~ * .st0 {
-  stroke-dasharray: 210, 900;
-  stroke-dashoffset: 0;
-}
-
-input:not(:valid) ~ .app-button {
-  pointer-events: none;
-  opacity: 0.6;
 }
 
 .app-button {
   text-decoration: none;
-  color: var("color-primary");
-  font-size: var("heading-text-size");
-  padding: 0 var("app-padding");
+  background-color: rgb(49, 124, 209);
+  border-radius: 1vh;
+  left: 37%;
+  color: #ffffff;
+  font-size: 2.4vh;
+  padding: 1.5vh 3vh;
   position: absolute;
-  bottom: 10vh;
+  bottom: 7.5vh;
   font-weight: 400;
   
   &:focus {
@@ -157,18 +137,18 @@ input:not(:valid) ~ .app-button {
 #welcome:target ~ * {
   .app-button {
     /* transition-delay: var(duration + 0.1s;*/
-    animation: button-press 2s var("easing") both;
+    animation: button-press 2s cubic-bezier(0.77, 0, 0.175, 1) both;
   }
   
   .st0 {
     stroke-dashoffset: -760;
     stroke-dasharray: 140, 900;
-    transition-duration: var("segment-duration");
-    animation: disappear 0s var("segment-duration") + 0.1s both;
+    transition-duration: 1.2s;
+    animation: disappear 0s 1.2s + 0.1s both;
   }
   
   .st1 {
-    transition-duration: var("duration") / 2;
+    transition-duration: 0.6 / 2;
     opacity: 0;
   }
   
