--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -100,11 +100,16 @@ label {
     border-radius: 5px;
 }
 
+.padtop {
+    padding-top: 30px
+}
+
 a.pure-button-primary {
     background: white;
     color: #1f8dd6;
     border-radius: 5px;
     font-size: 120%;
+    top: 100px
 }
 
 
@@ -171,6 +176,19 @@ a.pure-button-primary {
     background-position-y: -100px;
     background-repeat: repeat;
     background-position-x: center
+}
+
+.splash-image {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 90%;
+
+    > img {
+        position: absolute;
+        width: 100%;
+        top: -10%
+    }
 }
 
 .splash {
@@ -290,6 +308,8 @@ a.pure-button-primary {
     body {
         font-size: 16px;
     }
+    
+    
 
     /* We can align the menu header to the left, but float the
     menu items to the right. */
@@ -334,4 +354,5 @@ a.pure-button-primary {
     .splash-head {
         font-size: 300%;
     }
+    
 }
