--- a/src/forms/Points.css
+++ b/src/forms/Points.css
@@ -4,20 +4,13 @@
     padding: 0;
     box-sizing: border-box;
   }
-  input{
-    left: 0vh;
-    
-  }
 
-  .title {
-    color: black;
-    margin-top: -30px;
-    line-height: 100px;
-    font-size: 40px;
-    font-weight: bold;
-  }
+
   .formbold-mb-3 {
-    margin-bottom: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 92%;
+    margin-left: 4%;
   }
   .formbold-relative {
     position: relative;
@@ -58,7 +51,7 @@
     max-width: 50rem;
     width: 100%;
     background: white;
-    padding: 40px;
+    
     border-radius: 10px;
   }
 
@@ -67,7 +60,7 @@
     margin: 0 auto 45px;
   }
 
-  .formbold-input-wrapp > div {
+  .formbold-input-wrap > div {
     display: flex;
     gap: 20px;
   }
@@ -149,34 +142,6 @@
     border-radius: 3px;
   }
 
-  .formbold-form-file {
-    padding: 12px;
-    font-size: 14px;
-    line-height: 24px;
-    color: rgba(83, 99, 135, 0.5);
-  }
-  .formbold-form-file::-webkit-file-upload-button {
-    display: none;
-  }
-  .formbold-form-file:before {
-    content: 'Upload';
-    display: inline-block;
-    background: #EEEEEE;
-    border: 0.5px solid #E7E7E7;
-    border-radius: 3px;
-    padding: 3px 12px;
-    outline: none;
-    white-space: nowrap;
-    -webkit-user-select: none;
-    user-select: none;
-    cursor: pointer;
-    color: #637381;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
-    margin-right: 10px;
-  }
-
   .formbold-btn {
     font-size: 16px;
     border-radius: 5px;
@@ -186,14 +151,29 @@
     background-color: #6a64f1;
     color: white;
     cursor: pointer;
-    margin-top: 25px;
+    margin-bottom: 20px;
+
+    margin-left: 4%;
+  }
+  .formbold-form-header h3 {
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+    line-height: 3;
   }
 
   .formbold-btn:disabled {
     background-color: #6b64f1b2;
     cursor: not-allowed
   }
-
+  .formbold-form-header {
+    background: #6a64f1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px 36px;
+    border-radius: 8px 8px 0px 0px;
+  }
   .button-group {
     display: flex;
     justify-content: center;
