--- a/src/forms/Points.css
+++ b/src/forms/Points.css
@@ -111,7 +111,7 @@
     display: flex;
     cursor: pointer;
     user-select: none;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 24px;
     color: #536387;
   }
@@ -140,8 +140,9 @@
     margin-top: 2px;
     border: 0.7px solid #dde3ec;
     border-radius: 3px;
+    
   }
-
+  
   .formbold-btn {
     font-size: 16px;
     border-radius: 5px;
@@ -151,10 +152,12 @@
     background-color: #6a64f1;
     color: white;
     cursor: pointer;
-    margin-bottom: 20px;
-
-    margin-left: 4%;
+    &[id = 'points'] {
+      margin-left: 3%;
+      margin-bottom: 3%;
+    }
   }
+
   .formbold-form-header h3 {
     font-weight: 700;
     font-size: 20px;
