--- a/src/forms/Points.css
+++ b/src/forms/Points.css
@@ -203,4 +203,20 @@
   }
 
   @media all and (max-width : 768px) {
+    .formbold-main-wrapper {
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0px !important;
+    }
+  
+    .formbold-form-wrapper {
+      margin: 10vh 0 !important;
+      max-width: 50rem;
+      width: 100%;
+      background: white;
+      
+      border-radius: 10px;
+    }
   }
