--- a/src/pages/Surfaces.css
+++ b/src/pages/Surfaces.css
@@ -17,7 +17,25 @@
 }
 
 .continued {
-    border-bottom: black solid 0.5px;
+    border-bottom: rgb(228, 228, 228) solid 0.5px;
+    margin-bottom: 10px;
+}
+
+.images {
+    width: 100%;
+    height: 100%;
+}
+
+.inTwo {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.roundedPhoto {
+    position: relative;
+    width: 100px;
+    height: 100px;
 }
 
 .input {
@@ -41,4 +59,10 @@
     width: fit-content;
     border-radius: 5px;
     border: 1px solid #dde3ec;
+}
+
+.underPhoto{
+    margin-left: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
