--- a/src/pages/Surfaces.css
+++ b/src/pages/Surfaces.css
@@ -2,6 +2,8 @@
     padding: 5%;
 }
 
+
+
 .editContent {
     background: white;
     width: 75%;
@@ -14,6 +16,10 @@
     font-size: 20px;
     font-weight: 600;
     color: black
+}
+.specError {
+    color: red;
+    
 }
 
 .continued {
